# dot

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  ODHT_LICENSE  README  README.SET  README.md  STYLE  acinclude.m4  acsfs.m4  configure.ac
cdht/: Makefile.am  cdht_server.cc  cdht_server.h
demo/dsync-demo/: README  dsync-demo.py  test.py
demo/dsync-demo/data/: NODES
demo/intel-openhouse-2008/: QBitmap.py  QPlot.py  demo.py
demo/intel-openhouse-2008/trace/Hybrid/: log-node1-chunk  log-node10-chunk  log-node2-chunk  log-node3-chunk  log-node5-chunk  log-node6-chunk  log-node7-chunk  log-node8-chunk  log-node9-chunk
demo/intel-openhouse-2008/trace/Rarest-Random/: log-node1-chunk  log-node10-chunk  log-node2-chunk  log-node3-chunk  log-node5-chunk  log-node6-chunk  log-node7-chunk  log-node8-chunk  log-node9-chunk
demo/intel-openhouse-2008/trace/Sequential/: log-node1-chunk  log-node10-chunk  log-node2-chunk  log-node3-chunk  log-node5-chunk  log-node6-chunk  log-node7-chunk  log-node8-chunk  log-node9-chunk
demo/set-demo/: CONFIG  sample  sample1  set-demo.pl  set1-15  set1-60  set1-base
demo/sigcomm-demo/: sigcomm-demo.py
demo/sigcomm-demo/raw/: COORDS  LIST.TXT
gcp/: Makefile.am  debug.h  ftw_test.cc  gcp.cc  gcp.h  gcp_get.cc  gcp_prot.x  gcp_put.T
gtcd/: Makefile.am  TODO  chunkerPlugin.h  configfile.cc  configfile.h  debug.cc  debug.h  gtc.h  gtc_ext_interface.cc  gtc_ext_interface.h  gtc_get.cc  gtc_prot_strbuf.h  gtc_put.cc  gtcd.T  gtcd.h  main.cc  params.h  plugin.h  se_transfer.h  servePlugin.h  storagePlugin.h  xferPlugin.h
gtcd/chunker/: Makefile.am  chunk.C  chunkAlg_fixed.cc  chunkAlg_fixed.h  chunkerPlugin_all.h  chunkerPlugin_default.cc  chunkerPlugin_default.h  chunkerPlugin_generate.cc  chunkerPlugin_generate.h
gtcd/prot/: Makefile.am  bdb_int.x  gtc_prot.x  odht_prot.x
gtcd/serve/: Makefile.am  servePlugin_all.h  servePlugin_compress.T  servePlugin_compress.h  servePlugin_segtc.T  servePlugin_segtc.h  servePlugin_senoop.T  servePlugin_senoop.h
gtcd/storage/: Makefile.am  chunk_cache.cc  chunk_cache.h  dht.T  dht.h  dht_test.T  se_transfer.T  storagePlugin_all.h  storagePlugin_bdb.cc  storagePlugin_bdb.h  storagePlugin_ce.T  storagePlugin_ce.h  storagePlugin_cefdisk.T  storagePlugin_cefdisk.h  storagePlugin_disk.cc  storagePlugin_disk.h  storagePlugin_snoop.T  storagePlugin_snoop.h  storagePlugin_sset.T  storagePlugin_sset.h
gtcd/xfer/: Makefile.am  match_test.cc  xferPlugin_all.h  xferPlugin_aux.T  xferPlugin_decompress.T  xferPlugin_decompress.h  xferPlugin_gtc_prot.x  xferPlugin_mpath.cc  xferPlugin_mpath.h  xferPlugin_msrc.T  xferPlugin_msrc.h  xferPlugin_opt.T  xferPlugin_opt.h  xferPlugin_portable.cc  xferPlugin_portable.h  xferPlugin_xdisk.T  xferPlugin_xdisk.h  xferPlugin_xgtc.T  xferPlugin_xgtc.h  xferPlugin_xnoop.T  xferPlugin_xnoop.h  xferPlugin_xset.T  xferPlugin_xset.h
mailfilter/: Makefile.am  README  fingerprint_c.C  fingerprint_c.h  mfmilter.c  testMessage.c  testMessage.txt
mailfilter/analysis/: README  mailparse.rb  mailregen.rb  makeplots.gp  mlog.rb  pack_mfmilter.pl
mailfilter/samples/: 1
misc/: README  bench_db.rb  bench_search.rb  bench_some.rb
misc/plcmd/: Makefile.am  README  TODO  plcmd.cc  plcmd.h  plcmd_daemon.cc
patches/: README  arpc.patch  rabin.patch
test/: Makefile.am  README  TODO  dot-test.rb  gcp_perf.pl  gcp_test.conf  gcp_test.sh  gcp_test_opt.conf  gcp_test_set.conf  other_gcp.conf  other_gcp.sh  other_gcp_opt.conf  other_gcp_set.conf  params.conf  spawn_buffered.rb  test_ext.c  unit_test_hack.rb
util/: Makefile.am  connection_cache.T  connection_cache.h  const.cc  create_tree.c  dbparse.rb  diskload.c  hints.cc  util.cc  util.h
